// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToggleButtonGroup > should match snapshot when disabled 1`] = `
<DocumentFragment>
  <div
    class="cds--content-switcher !rounded-[4px] bg-neutral-100 border-[0.5px] border-border-medium font-tertiary cds--layout-constraint--size__default-md cds--layout-constraint--size__min-sm cds--layout-constraint--size__max-lg"
    role="tablist"
  >
    <button
      aria-selected="false"
      class="cds--content-switcher-btn"
      disabled=""
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="cds--content-switcher__label"
        title="Option A"
      >
        Option A
      </span>
    </button>
    <button
      aria-selected="true"
      class="cds--content-switcher-btn cds--content-switcher--selected"
      disabled=""
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="cds--content-switcher__label"
        title="Option B"
      >
        Option B
      </span>
    </button>
    <button
      aria-selected="false"
      class="cds--content-switcher-btn"
      disabled=""
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="cds--content-switcher__label"
        title="Option C"
      >
        Option C
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ToggleButtonGroup > should match snapshot when rendered with default props 1`] = `
<DocumentFragment>
  <div
    class="cds--content-switcher !rounded-[4px] bg-neutral-100 border-[0.5px] border-border-medium font-tertiary cds--layout-constraint--size__default-md cds--layout-constraint--size__min-sm cds--layout-constraint--size__max-lg"
    role="tablist"
  >
    <button
      aria-selected="true"
      class="cds--content-switcher-btn cds--content-switcher--selected"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="cds--content-switcher__label"
        title="Option A"
      >
        Option A
      </span>
    </button>
    <button
      aria-selected="false"
      class="cds--content-switcher-btn"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="cds--content-switcher__label"
        title="Option B"
      >
        Option B
      </span>
    </button>
    <button
      aria-selected="false"
      class="cds--content-switcher-btn"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="cds--content-switcher__label"
        title="Option C"
      >
        Option C
      </span>
    </button>
  </div>
</DocumentFragment>
`;
